Modify Interest and Finish-Profile forms
Do the validation checks on submit for interest and finish-profile
Also change Faculty Verification to Instructor Verification (per bug card)

--- a/src/app/pages/faculty-verification/faculty-verification.hbs
+++ b/src/app/pages/faculty-verification/faculty-verification.hbs
@@ -1,5 +1,5 @@
 <style scoped>@import url(/app/pages/faculty-verification/faculty-verification.css);</style>
-<h1>Faculty Verification</h1>
+<h1>Instructor Verification</h1>
 <div class="faculty-verification">
     <p class="subhead">
         A verified instructor account at OpenStax gives you access to all
