--- a/src/styles/components/tag-multi-select.scss
+++ b/src/styles/components/tag-multi-select.scss
@@ -9,6 +9,7 @@ $faint-gray: rgba(color(gray), 0.33);
     min-height: 4.8rem;
     min-width: 12rem;
     position: relative;
+    padding-right: 4.8rem;
 
     .tag-list {
         flex-grow: 1;
