add JS to add/remove fixed class to get-this-title div

--- a/src/app/pages/details/details.hbs
+++ b/src/app/pages/details/details.hbs
@@ -96,10 +96,10 @@
                     you have a correction to suggest, submit it here. We'll review your
                     suggestion and make necessary changes.
                 </p>
-                <div class="links">
-                    <a class="go-to">Errata list</a>
-                    <a class="go-to">Suggest a correction</a>
-                </div>
+                <ul class="links">
+                    <li><a class="go-to">Errata list</a></li>
+                    <li><a class="go-to">Suggest a correction</a></li>
+                </ul>
             </div>
             </section>
 </div>
