--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -5,6 +5,12 @@
 .details-page {
     position: relative;
 
+    h2,
+    h3,
+    h4 {
+        letter-spacing: -0.1rem;
+    }
+
     .container {
         display: flex;
         margin: 0 auto;
@@ -68,12 +74,22 @@
             }
 
             .box {
+                opacity: 1;
+                transform: translate3d(0, 0, 0);
+                transition: opacity 0.2s, transform 0.2s linear;
+
                 @include desktop {
                     width: 25rem;
                     position: absolute;
                     right: 0;
                     background-color: rgba(color(neutral-lightest), 0.95);
                     padding: 1.5rem;
+                }
+
+                &:not(.fixed) {
+                    opacity: 0;
+                    transform: translate3d(0, -150%, 0);
+
                 }
             }
 
@@ -294,8 +310,38 @@
             margin-bottom: 0;
         }
 
+        .links {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            cursor: pointer;
+        }
+
         .go-to {
-            display: block;
+            position: relative;
+
+            &::before,
+            &::after {
+                border-right: 0.2rem solid;
+                content: '';
+                display: block;
+                height: 0.7rem;
+                position: absolute;
+                transform: rotate3d(0, 0, 1, 135deg);
+                right: -1.3rem;
+                top: 0.7rem;
+                width: 0;
+            }
+
+            &::after {
+                top: 1.1rem;
+                right: -1.3rem;
+                transform: rotate3d(0, 0, 1, 45deg);
+            }
+
+            &:hover {
+                color: darken(color(cyan), 10%);
+            }
         }
     }
 }
