--- a/src/styles/components/forms.scss
+++ b/src/styles/components/forms.scss
@@ -10,17 +10,53 @@
 $text-black: rgba(color(neutral-darkest), 0.87);
 $text-secondary: rgba(color(neutral-darkest), 0.7);
 
-
 form {
     color: $text-black;
     line-height: 3rem;
+    font-size: 1.5rem;
+    font-weight: 400;
+
+    label,
+    p {
+        color: color(primary);
+    }
+
+    h1 {
+        font-weight: 700;
+        text-align: center;
+        line-height: 1;
+    }
+
+    h2 {
+        color: $text-secondary;
+        font-size: 1.7rem;
+        font-weight: 500;
+        text-align: center;
+    }
+
+    a {
+        color: color(cyan);
+        text-decoration: none;
+    }
+
+    .subhead {
+        font-size: 1.7rem;
+        font-weight: 400;
+        text-align: center;
+    }
 
     [type="submit"] {
         background-color: color(primary);
         border: 0;
         color: color(neutral-lightest);
-        font-size: 1.7rem;
+        font-size: 1.8rem;
         padding: 1rem 2rem;
+        float: right;
+        margin: 0.84rem 0;
+        width: 15rem;
+        appearance: none;
+        border-radius: 0;
+        font-weight: 600;
     }
 
     .row {
@@ -53,11 +89,6 @@ form {
         .proxy-widget.invalid {
             border: 0.1rem solid color(danger);
         }
-    }
-
-    [required]::after {
-        content: '*';
-        position: absolute;
     }
 
     label {
