style responsive behavior for resources & authors section

--- a/src/app/pages/subjects/subjects.scss
+++ b/src/app/pages/subjects/subjects.scss
@@ -146,6 +146,20 @@
                 margin-left: -2rem;
                 position: absolute;
             }
+
+            .cta > .btn {
+                width: 100%;
+                font-variant: normal;
+                margin: 1rem 0 0;
+                padding: 1.5rem;
+                text-transform: uppercase;
+            }
+
+            .btn:hover,
+            .btn:focus {
+                transform: scale3d(1, 1, 1);
+                background-color: darken(color(orange), 5%);
+            }
         }
 
         .cover:hover .details {
