--- a/src/app/pages/details/details.hbs
+++ b/src/app/pages/details/details.hbs
@@ -64,7 +64,7 @@
                 <h3>OpenStax Instructor Resources</h3>
                 <p>Get started with free resources to support your course. (Verified instructor
                     account required.)</p>
-                <div id="instructor-resources" class="instructor-resources"></div>
+                <div id="instructor-resources" class="resource"></div>
             </div>
             <div class="row">
             <h3>Ally Resources</h3>
@@ -72,7 +72,7 @@
             </div>
             <div class="row">
                 <h3>Student Resources</h3>
-                <div id="student-resources" class="student-resources"></div>
+                <div id="student-resources" class="resource"></div>
             </div>
             <div class="cta">
                 <a class="btn">Learn how you can tell your instructor about OpenStax!</a>
