--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -28,6 +28,20 @@
         }
     }
 
+    .cta > .btn {
+        width: 100%;
+        font-variant: normal;
+        margin: 1rem 0 0;
+        padding: 1.5rem;
+        text-transform: uppercase;
+    }
+
+    .btn:hover,
+    .btn:focus {
+        transform: scale3d(1, 1, 1);
+        background-color: darken(color(orange), 5%);
+    }
+
     .book-info {
         justify-content: space-between;
         margin-bottom: 6rem;
@@ -255,8 +269,7 @@
         color: color(neutral-dark);
         background-color: lighten(color(neutral-lighter), 8%);
 
-        h2,
-        h3 {
+        h2 {
             margin-bottom: 0;
         }
 
@@ -276,6 +289,55 @@
 
         .cta {
             flex: 0 0 100%;
+        }
+    }
+
+    .resource {
+        display: flex;
+        flex-flow: column nowrap;
+
+        @include tablet {
+            flex-flow: row wrap;
+        }
+
+        @include desktop {
+            flex-flow: row wrap;
+        }
+
+        > div {
+            background-color: color(neutral-lightest);
+            padding: 1.5rem;
+            margin-bottom: 1.5rem;
+
+            @media (min-width: #{breakpoints(phone) + 1}) {
+                flex: 1 0 46%;
+
+                &:nth-child(odd):not(:only-child) {
+                    margin-right: 1.5rem;
+                }
+
+            }
+
+            @media (min-width: 900px) {
+                flex: 0 0 30%;
+                margin-right: 1.5rem;
+            }
+
+            h4 {
+                color: color(blue);
+                margin-bottom: 1rem;
+            }
+
+            a {
+                color: color(cyan);
+                text-transform: uppercase;
+                font-size: 1.4rem;
+                font-weight: 500;
+
+                &:hover {
+                    color: darken(color(cyan), 10%);
+                }
+            }
         }
     }
 
