Add comp-copy page styles

--- a/src/app/pages/comp-copy/comp-copy.hbs
+++ b/src/app/pages/comp-copy/comp-copy.hbs
@@ -1,27 +1,31 @@
 <style scoped>@import url(/app/pages/comp-copy/comp-copy.css);</style>
-<h1>Request an iBooks Complimentary Copy</h1>
-<div class="comp-copy">
-    <div class="subhead">
-        <p>
-            All instructors with a verified instructor account can receive an
-            iBooks comp copy of their book of choice.
-        </p>
-        <p>
-            OpenStax textbooks are free for students in web view and PDF form,
-            and for less than $5 in the iBooks Store.
-        </p>
-    </div>
-    <div>
-        <form accept-charset="UTF-8"
-         action="https://www.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="post">
-            <div>
-                <input name="utf8" type="hidden" value="✓" />
-                <!-- This is our organization id -->
-                <input type=hidden name="oid" value="00DU0000000Kwch">
-                <input type=hidden name="retURL" value="{{urlOrigin}}/comp-copy-confirmation">
-                <input type=hidden name="lead_source" value="Comp Request">
-            </div>
-            <fieldset class="labeled-inputs">
+
+<div class="text-content subhead">
+    <h1>Request an iBooks Complimentary Copy</h1>
+    <p>
+        All instructors with a verified instructor account can receive an
+        iBooks comp copy of their book of choice.
+    </p>
+    <p>
+        OpenStax textbooks are free for students in web view and PDF form,
+        and for less than $5 in the iBooks Store.
+    </p>
+</div>
+
+
+<form accept-charset="UTF-8" class="form"
+ action="https://www.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="post">
+    <div class="text-content">
+         <div>
+            <input name="utf8" type="hidden" value="✓" />
+            <!-- This is our organization id -->
+            <input type=hidden name="oid" value="00DU0000000Kwch">
+            <input type=hidden name="retURL" value="{{urlOrigin}}/comp-copy-confirmation">
+            <input type=hidden name="lead_source" value="Comp Request">
+        </div>
+
+        <div class="labeled-inputs row">
+            <div class="col">
                 <label>
                     <span>First name</span>
                     <input name="first_name" type="text" required />
@@ -34,6 +38,9 @@
                     <span>School name</span>
                     <input name="company" type="text" required />
                 </label>
+            </div>
+
+            <div class="col">
                 <label>
                     <span>School url</span>
                     <input name="URL" type="text" required />
@@ -46,54 +53,64 @@
                     <span>Phone number</span>
                     <input name="phone" type="text" required />
                 </label>
-                <label>
-                    <span>Book Requested</span>
-                    <select name="00NU00000053nzR" required />
-                        <option value="" disabled selected>Please Select</option>
-                        <option value="Anatomy and Physiology">Anatomy and Physiology</option>
-                        <option value="Biology">Biology</option>
-                        <option value="Chemistry">Chemistry</option>
-                        <option value="College Physics">College Physics</option>
-                        <option value="Concepts of Biology">Concepts of Biology</option>
-                        <option value="Introduction to Sociology 2e">Introduction to Sociology 2e</option>
-                        <option value="Introductory Statistics">Introductory Statistics</option>
-                        <option value="Principles of Economics">Principles of Economics</option>
-                        <option value="Principles of Macroeconomics">Principles of Macroeconomics</option>
-                        <option value="Principles of Microeconomics">Principles of Microeconomics</option>
-                        <option value="Psychology">Psychology</option>
-                        <option value="U.S. History">U.S. History</option>
-                    </select>
-                </label>
-            </fieldset>
-            <fieldset class="labeled-inputs no-inset">
-                <label>
-                    <span>Number of students this semester</span>
-                    <input name="00NU00000052VId" type="number" required />
-                </label>
-                <label>
-                    <span>Your department</span>
-                    <input name="department" type="text" />
-                </label>
-                <label>
-                    <span>Decision date</span>
-                    <input id="decision-date" type="date" />
-                    <input id="hidden-decision-date" type="hidden" name="00NU00000052i3K" />
-                </label>
-                <div class="form-item">
-                    <span>Have you adopted an OpenStax textbook?</span>
-                    <label>
-                        <input type="radio" name="have_adopted" value="yes" />
-                        Yes
-                    </label>
-                    <label>
-                        <input type="radio" name="have_adopted" checked value="no" />
-                        No
-                    </label>
-                </div>
-            </fieldset>
-            <div>
-                <input type="submit" value="Submit" role="button" />
             </div>
-        </form>
+        </div>
     </div>
+
+<div class="wrapper">
+{{{strips}}}
+<div class="text-content labeled-inputs row book-info">
+    <div class="col">
+        <label>
+            <span>Book Requested</span>
+            <select name="00NU00000053nzR" required />
+                <option value="" disabled selected>Please Select</option>
+                <option value="Anatomy and Physiology">Anatomy and Physiology</option>
+                <option value="Biology">Biology</option>
+                <option value="Chemistry">Chemistry</option>
+                <option value="College Physics">College Physics</option>
+                <option value="Concepts of Biology">Concepts of Biology</option>
+                <option value="Introduction to Sociology 2e">Introduction to Sociology 2e</option>
+                <option value="Introductory Statistics">Introductory Statistics</option>
+                <option value="Principles of Economics">Principles of Economics</option>
+                <option value="Principles of Macroeconomics">Principles of Macroeconomics</option>
+                <option value="Principles of Microeconomics">Principles of Microeconomics</option>
+                <option value="Psychology">Psychology</option>
+                <option value="U.S. History">U.S. History</option>
+            </select>
+        </label>
+
+
+        <label>
+            Number of students this semester
+            <input name="00NU00000052VId" type="number" required />
+        </label>
+
+        <label>
+            Your department
+            <input name="department" type="text" />
+        </label>
+    </div>
+
+    <div class="col">
+        <label>
+            Decision date<br>
+            <input id="decision-date" type="date" />
+            <input id="hidden-decision-date" type="hidden" name="00NU00000052i3K" />
+        </label>
+
+        <label class="form-item">
+            Have you adopted an OpenStax textbook?
+            <select name="00NU00000055sqB">
+                <option type="radio" name="have_adopted" value="1">Yes</option>
+                <option type="radio" name="have_adopted" checked value="0">No</option>
+            </select>
+        </label>
+
+        <div class="cta">
+            <input type="submit" value="Submit" role="button" class="btn"/>
+        </div>
+    </div>
+</form>
 </div>
+
