--- a/src/app/pages/renewal/renewal.hbs
+++ b/src/app/pages/renewal/renewal.hbs
@@ -1,13 +1,10 @@
 <div class="text-content subhead">
-    <h1>Let us know you’re using OpenStax</h1>
-    <p>To get started with an OpenStax book, fill out this form and paste the
-        book URL in your syllabus. Our books and their accompanying resources
-        are yours to use, free.</p>
+    <h1>Let us know you’re still using OpenStax</h1>
+    <p>To renew an OpenStax book, fill out this form. Our books and their
+        accompanying resources are yours to use, free.</p>
     <p>Help us continue to make high-quality educational materials accessible by
         letting us know you’ve adopted! Our future grant funding is based on
         faculty adoptions and the number of students we impact. </p>
-    <p>Not using OpenStax yet? Go to our OpenStax <a href="/interest">interest
-        form</a> and we’ll send you the information you need.</p>
 </div>
 
 <form accept-charset="UTF-8" class="new_adoption form"
@@ -18,7 +15,7 @@
             <!-- This is our organization id -->
             <input type=hidden name="oid" value="00DU0000000Kwch">
             <input type=hidden name="retURL" value="{{urlOrigin}}/adoption-confirmation">
-            <input type=hidden name="lead_source" value="OS Adoption Form">
+            <input type=hidden name="lead_source" value="OS Renewal Form">
         </div>
         <div class="labeled-inputs row">
             <div class="col">
